refactor: Always return errors in JSON for CEEMS LB
* Reuse the custom errors of CEEMS API server in CEEMS LB to return any errors in JSON. This will show the returned errors properly in Grafana helping users and operators to find issues.

* Update e2e test fixtures
