# pkg/api/http/docs/swagger.yaml
@@ -196,17 +196,17 @@ definitions:
     - not_acceptable
     type: string
     x-enum-varnames:
-    - errorNone
-    - errorUnauthorized
-    - errorForbidden
-    - errorTimeout
-    - errorCanceled
-    - errorExec
-    - errorBadData
-    - errorInternal
-    - errorUnavailable
-    - errorNotFound
-    - errorNotAcceptable
+    - ErrorNone
+    - ErrorUnauthorized
+    - ErrorForbidden
+    - ErrorTimeout
+    - ErrorCanceled
+    - ErrorExec
+    - ErrorBadData
+    - ErrorInternal
+    - ErrorUnavailable
+    - ErrorNotFound
+    - ErrorNotAcceptable
   models.Cluster:
     properties:
       id:
